--- a/public/assets/css/gallery-grid.css
+++ b/public/assets/css/gallery-grid.css
@@ -129,7 +129,7 @@
   
   /* responsive to phone screen size */
   @media screen and (max-width:550px){
-    .container{
+    .grid-container{
       grid-template-columns: repeat(2,1fr);
     }
   .w-3,.w-4,.w-5,.w-6{
